--- a/Proiect/.classpath
+++ b/Proiect/.classpath
@@ -7,6 +7,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Program Files (x86)/MySQL/Connector J 8.0/mysql-connector-java-8.0.24.jar"/>
-	<classpathentry kind="lib" path="D:/FIS/Proiect_final/Proiect/jdatepicker-1.3.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ANDREI/git/RezervareBilete/Proiect/jdatepicker-1.3.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
